2010-10-29  Julien Danjou  <julien@danjou.info>

	* gnus-group.el (gnus-group-make-tool-bar): Check for display graphic
	capability before doing anything.
	(gnus-group-insert-group-line): Remove useless
	gnus-group-remove-excess-properties.

2010-10-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-goto-part): Work for article narrowed by ^L.

2010-10-28  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-rescan-group): Try to restore the window
	config after reselecting.

2010-10-28  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-put-image): Use point even if only inserting text.
	(shr-put-image): Save excursion when inserting alt text on non-graphic
	display, so the behaviour is the same when we are on a graphic display.

	* nnir.el (nnir-run-swish-e): Remove hyrex support.

2010-10-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-jump-to-part): Error on no part; fix prompt.
	(gnus-mime-copy-part): Check coding system, not charset.
	(gnus-mime-view-part-externally): Never remove part.
	(gnus-mime-view-part-internally): Don't remove part here.
	(gnus-article-part-wrapper): Make sure MIME tag is visible.
	(gnus-article-goto-part): Go to displayed or preferred subpart if it is
	multipart/alternative.

	* mm-decode.el (mm-display-part): Take optional arg `force'.

2010-10-26  Julien Danjou  <julien@danjou.info>

	* gnus-group.el (gnus-group-default-list-level): Add this function to
	compute the default list level.
	(gnus-group-default-list-level): Add possibility to use a function.

2010-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-shr): Add undisplayer to MIME handle.

	* gnus-group.el (gnus-group-completing-read)
	(gnus-read-ephemeral-bug-group): Replace replace-regexp-in-string with
	gnus-replace-in-string.

2010-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-tag-div): Added.

	* lpath.el: Fbind current-idle-time for XEmacs 21.4 and SXEmacs 22.1.
